--- a/estilos.css
+++ b/estilos.css
@@ -6,13 +6,13 @@ body {
     height: 100vh;
 }
 main {
-    height: 150px;
-    width: 200px;
+    height: 150px;    /*150*/
+    width: 200px;     /*200*/ 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 0.2rem;
+    gap: 0.4rem;
 }
 .box {
     height: 100%;
@@ -24,8 +24,8 @@ main {
 
 .inner-box {
     background-color: black;
-    height: 50px;
-    width: 90%;
+    height: 60px;
+    width: 100%;
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -35,16 +35,16 @@ main {
 }
 .date {
     border: none;
-    font-size: 0.5rem;
-    width: 90px;
+    font-size: 1rem;
+    width: 125px;
     height: 20px;
-    border-radius: 3px;
+    border-radius: 3.5px;
     padding: 10px;
     font-family: "Lucida Sans";
 }
 .calculate {
-    font-size: 0.6rem;
-    width: 50px; height: 20px;
+    font-size: 1rem;
+    width: 60px; height: 30px;
     border: none;
     border-radius: 1px;
     font-family: 'Lucida Sans';
@@ -61,11 +61,13 @@ main {
 }
 .number {
     font-family: Arial, Helvetica, sans-serif;
-    color: white; font-size: 1.6rem;
+    color: white; 
+    font-size: 1.5rem;
 }
+
 .label {
      font-family: Arial, Helvetica, sans-serif;
      letter-spacing: 2px;
-     font-size: 0.4rem;
+     font-size: 0.8rem;
      color: rgba(239, 238, 238, 0.941);
 }
